<resources>
    <string name="app_name">MovieApp</string>
    <string name="login_with_google">Login with Google</string>
    <string name="input_email">Input Email</string>
    <string name="input_password">Input Password</string>
    <string name="login">Login</string>
    <string name="remember_email_and_password">Remember email and password</string>
    <string name="or">Or</string>
    <string name="web_client_id">9361508384-jq0n69cn1eo53cdolnm8g0ho1ijr0ekj.apps.googleusercontent.com</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="sign_out">Sign out</string>
    <string name="movie_name">Movie name...</string>
    <string name="api_key">73b7aa70ab52ac1b3f5af1ac0e4ad9a3</string>
</resources>
